objects/DCCA_DO_Referral__c.object
<CustomObject>
    <description>Director’s Office (DO) receives referrals directly from the constituent or via the Governor&apos;s office by mail, e-mail, fax or phone.  The DO sends referrals to those DCCA Divisions that may be involved for review, response and/or remedy.</description>
    <label>DCCA DO Referral</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{000000}</displayFormat>
        <label>DCCA DO Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCCA DO Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF (Status__c = &quot;Completed&quot;,

(5 * ( FLOOR( ( CLOSED__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( CLOSED__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( FROM_CONST__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( FROM_CONST__c - DATE( 1900, 1, 8), 7 ) ) )
,
(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( FROM_CONST__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( FROM_CONST__c - DATE( 1900, 1, 8), 7 ) ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of business days from when the referral was received from the constituent and when it closed</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT( YEAR( FROM_CONST__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_DO__c</fullName>
        <description>Date referral sent to DO from DIV</description>
        <label>TO DIV</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>Most recent action taken by Division</description>
        <label>Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appropriate action</fullName>
                </value>
                <value>
                    <fullName>Comment/recommendation</fullName>
                </value>
                <value>
                    <fullName>Direct reply, bc Governor and Director</fullName>
                </value>
                <value>
                    <fullName>Direct reply, cc Governor and bc Director</fullName>
                </value>
                <value>
                    <fullName>Direct reply, copy to Director</fullName>
                </value>
                <value>
                    <fullName>Draft reply for Director</fullName>
                </value>
                <value>
                    <fullName>Draft reply for Governor</fullName>
                </value>
                <value>
                    <fullName>Draft reply for Lt. Governor</fullName>
                </value>
                <value>
                    <fullName>Follow up/status update</fullName>
                </value>
                <value>
                    <fullName>FYI</fullName>
                </value>
                <value>
                    <fullName>Submit copy of response</fullName>
                </value>
                <value>
                    <fullName>Submit Report of Contact</fullName>
                </value>
                <value>
                    <fullName>Submit Report of Direct Contact</fullName>
                </value>
                <value>
                    <fullName>Direct Reply, cc: Director or Submit Report of Direct Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLOSED__c</fullName>
        <description>Date the DO Referral was closed, completed</description>
        <label>CLOSED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>(IF(ISBLANK(CLOSED__c), &quot;Pending&quot;, &quot;Completed&quot;))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_GOV__c</fullName>
        <description>Date sent to Governor&apos;s Office</description>
        <label>TO GOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FROM_DO__c</fullName>
        <description>date of receipt from Division</description>
        <label>FROM DIV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject contained in the constituent&apos;s docment</description>
        <label>Subject</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cor_Type__c</fullName>
        <description>Correspondence Type from constituent</description>
        <label>Cor Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOC_DATE__c</fullName>
        <description>Date of document from constituent</description>
        <label>DOC DATE</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Division the referral is going to, could be more than one</description>
        <inlineHelpText>Select primary Division for this referral</inlineHelpText>
        <label>Division</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>BREG</fullName>
                </value>
                <value>
                    <fullName>CATV</fullName>
                </value>
                <value>
                    <fullName>DCA</fullName>
                </value>
                <value>
                    <fullName>DFI</fullName>
                </value>
                <value>
                    <fullName>DO</fullName>
                </value>
                <value>
                    <fullName>INS</fullName>
                </value>
                <value>
                    <fullName>ISCO</fullName>
                </value>
                <value>
                    <fullName>HPEAP</fullName>
                </value>
                <value>
                    <fullName>OAH</fullName>
                </value>
                <value>
                    <fullName>OCP</fullName>
                </value>
                <value>
                    <fullName>PUC</fullName>
                </value>
                <value>
                    <fullName>PVL</fullName>
                </value>
                <value>
                    <fullName>RICO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FROM_GOV__c</fullName>
        <description>Date of response from Governor&apos;s office</description>
        <label>FROM GOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alarm_Days__c</fullName>
        <defaultValue>2</defaultValue>
        <description>The number of days before the due date when alarm notifications start sending emails</description>
        <inlineHelpText>Enter the number of days before the referral due date to start sending out reminder emails</inlineHelpText>
        <label>Alarm Days before Due Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division_2__c</fullName>
        <description>Occasionally another Division is involved with providing a response to a referral</description>
        <inlineHelpText>Used when an additional Division is involved with the referral.</inlineHelpText>
        <label>Division 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>BREG</fullName>
                </value>
                <value>
                    <fullName>CATV</fullName>
                </value>
                <value>
                    <fullName>DCA</fullName>
                </value>
                <value>
                    <fullName>DFI</fullName>
                </value>
                <value>
                    <fullName>DO</fullName>
                </value>
                <value>
                    <fullName>INS</fullName>
                </value>
                <value>
                    <fullName>ISCO</fullName>
                </value>
                <value>
                    <fullName>HPEAP</fullName>
                </value>
                <value>
                    <fullName>OCP</fullName>
                </value>
                <value>
                    <fullName>OAH</fullName>
                </value>
                <value>
                    <fullName>PUC</fullName>
                </value>
                <value>
                    <fullName>PVL</fullName>
                </value>
                <value>
                    <fullName>RICO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FROM_CONST__c</fullName>
        <defaultValue>(TODAY())</defaultValue>
        <description>Received date from constituent</description>
        <label>DATE RECEIVED</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Constituent__c</fullName>
        <description>Constituent name</description>
        <label>Constituent</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIV_Readers__c</fullName>
        <description>List of Division groups</description>
        <label>DIV Readers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO-Admin</fullName>
                </value>
                <value>
                    <fullName>ASO-Fiscal</fullName>
                </value>
                <value>
                    <fullName>ASO-Staff</fullName>
                </value>
                <value>
                    <fullName>BREG-Admin</fullName>
                </value>
                <value>
                    <fullName>BREG-BAC</fullName>
                </value>
                <value>
                    <fullName>BREG-DOCI</fullName>
                </value>
                <value>
                    <fullName>BREG-DOCP</fullName>
                </value>
                <value>
                    <fullName>BREG-Office Services</fullName>
                </value>
                <value>
                    <fullName>BREG-Records</fullName>
                </value>
                <value>
                    <fullName>BREG-SEB</fullName>
                </value>
                <value>
                    <fullName>BREG-SEC</fullName>
                </value>
                <value>
                    <fullName>BREG-Staff</fullName>
                </value>
                <value>
                    <fullName>CATV-Staff</fullName>
                </value>
                <value>
                    <fullName>DCA-Staff</fullName>
                </value>
                <value>
                    <fullName>DCCA-Staff</fullName>
                </value>
                <value>
                    <fullName>DFI-Staff</fullName>
                </value>
                <value>
                    <fullName>DO-Admin</fullName>
                </value>
                <value>
                    <fullName>DO-Personnel</fullName>
                </value>
                <value>
                    <fullName>DO-Staff</fullName>
                </value>
                <value>
                    <fullName>INS-Admin</fullName>
                </value>
                <value>
                    <fullName>INS-Captive</fullName>
                </value>
                <value>
                    <fullName>INS-Fraud</fullName>
                </value>
                <value>
                    <fullName>INS-FSE</fullName>
                </value>
                <value>
                    <fullName>INS-Health</fullName>
                </value>
                <value>
                    <fullName>INS-Investigation</fullName>
                </value>
                <value>
                    <fullName>INS-Legal</fullName>
                </value>
                <value>
                    <fullName>INS-Licensing</fullName>
                </value>
                <value>
                    <fullName>INS-Office Services</fullName>
                </value>
                <value>
                    <fullName>INS-RPA</fullName>
                </value>
                <value>
                    <fullName>INS-Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date_DO__c</fullName>
        <defaultValue>(Today() + 7)</defaultValue>
        <description>Due date to Director&apos;s Office</description>
        <label>Due Date DO</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Field__c</fullName>
        <description>Email address for first cc email address for the Division and DO</description>
        <label>Email DIV CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_NO__c</fullName>
        <description>Referral number, starts with GR is from Governor&apos;s Office or DR if from Director&apos;s Office</description>
        <inlineHelpText>Referral NO value used as the first part of response file names and for the referral folder in Sharepoint.</inlineHelpText>
        <label>Referral NO</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIV_Assigned__c</fullName>
        <description>Division individual assigned to the referral</description>
        <label>DIV Assigned Team Member</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <description>A positive number measures business days overdue, a negative number measures business days early</description>
        <formula>IF(ISBLANK(Due_Date_Gov__c),
(IF (Status__c = &quot;Completed&quot;,
(5 * ( FLOOR( ( CLOSED__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( CLOSED__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Due_Date_DO__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Due_Date_DO__c - DATE( 1900, 1, 8), 7 ) ) )
,
(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Due_Date_DO__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Due_Date_DO__c - DATE( 1900, 1, 8), 7 ) ) )))
,
(IF (Status__c = &quot;Completed&quot;,
(5 * ( FLOOR( ( CLOSED__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( CLOSED__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Due_Date_Gov__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Due_Date_Gov__c - DATE( 1900, 1, 8), 7 ) ) )
,
(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Due_Date_Gov__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Due_Date_Gov__c - DATE( 1900, 1, 8), 7 ) ) ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Negative number of business days to close the referral means Early, Positive number of business days to close means Overdue.</inlineHelpText>
        <label>Days Overdue or Early</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date_Gov__c</fullName>
        <description>Due date to Governor&apos;s Office</description>
        <label>Due Date Gov</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_DIV2_CC__c</fullName>
        <description>first cc email addr for Division 2</description>
        <label>Email DIV2 CC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_DIV2_CC2__c</fullName>
        <description>second cc email addr for Division 2</description>
        <label>Email DIV2 CC2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_DIV2_CC3__c</fullName>
        <description>third cc email addr for Division 2</description>
        <label>Email DIV2 CC3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Overdue_Status__c</fullName>
        <formula>If (Days_Overdue__c &gt; 0, &quot;Overdue&quot;, &quot;On Time&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alarm_Frequency__c</fullName>
        <description>Defined as once per day default</description>
        <label>Alarm Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Once per Day</fullName>
                    <default>true</default>
                    <label>Once per Day</label>
                </value>
                <value>
                    <fullName>Once Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Divsion_Response__c</fullName>
        <description>provides the uploaded response file name along with comments ie Draft for Review</description>
        <inlineHelpText>Enter the uploaded file name for the response and provide comments like &quot;Draft for Review&quot; or &quot;Final Response&quot;.  Use Send to Director button when ready.</inlineHelpText>
        <label>Divsion Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_DIV2_Primary__c</fullName>
        <description>first primary email addr for Division 2</description>
        <label>Email DIV2 Primary</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_DIV2_Primary2__c</fullName>
        <description>second primary email addr for Division 2</description>
        <label>Email DIV2 Primary2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_DIV2_Primary3__c</fullName>
        <description>third primary email addr for Division 2</description>
        <label>Email DIV2 Primary3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DCCA_DO_Mail_List_Match__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DCCA DO Mail List Match</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Division__c</field>
                <operation>equals</operation>
                <valueField>DCCA_DO_Mail_List__c.DCCA_Division_ML__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DCCA_DO_Mail_List__c</referenceTo>
        <relationshipLabel>DCCA DO Referrals Mail List</relationshipLabel>
        <relationshipName>DCCA_DO_Referrals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DCCA_DO_Mail_List_Match2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DCCA DO Mail List Match2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Division_2__c</field>
                <operation>equals</operation>
                <valueField>DCCA_DO_Mail_List__c.DCCA_Division_ML__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DCCA_DO_Mail_List__c</referenceTo>
        <relationshipLabel>DCCA DO Referrals (DCCA DO Mail List Match2)</relationshipLabel>
        <relationshipName>DCCA_DO_Referrals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Constituent__c</columns>
        <columns>FROM_CONST__c</columns>
        <columns>Subject__c</columns>
        <columns>Referral_NO__c</columns>
        <columns>Division__c</columns>
        <columns>Division_2__c</columns>
        <columns>Due_Date_DO__c</columns>
        <columns>Due_Date_Gov__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DCCA_DO_Referral_Current_FY</fullName>
        <columns>NAME</columns>
        <columns>Constituent__c</columns>
        <columns>Subject__c</columns>
        <columns>FROM_CONST__c</columns>
        <columns>DOC_DATE__c</columns>
        <columns>Referral_NO__c</columns>
        <columns>FROM_GOV__c</columns>
        <columns>TO_GOV__c</columns>
        <columns>FROM_DO__c</columns>
        <columns>TO_DO__c</columns>
        <columns>Division__c</columns>
        <columns>Due_Date_Gov__c</columns>
        <columns>Due_Date_DO__c</columns>
        <columns>Status__c</columns>
        <columns>Overdue_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FROM_CONST__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2022</value>
        </filters>
        <label>DCCA DO Referral Current FY</label>
    </listViews>
    <listViews>
        <fullName>DCCA_DO_Referral_with_Dates</fullName>
        <columns>NAME</columns>
        <columns>Constituent__c</columns>
        <columns>Subject__c</columns>
        <columns>FROM_CONST__c</columns>
        <columns>DOC_DATE__c</columns>
        <columns>Referral_NO__c</columns>
        <columns>FROM_GOV__c</columns>
        <columns>TO_GOV__c</columns>
        <columns>FROM_DO__c</columns>
        <columns>TO_DO__c</columns>
        <columns>Division__c</columns>
        <columns>Due_Date_Gov__c</columns>
        <columns>Due_Date_DO__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>DCCA DO Referral with Dates</label>
    </listViews>
    <listViews>
        <fullName>DCCA_Director_Office_Referrals_List</fullName>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>Division_2__c</columns>
        <columns>FROM_CONST__c</columns>
        <columns>CLOSED__c</columns>
        <columns>Status__c</columns>
        <columns>Referral_NO__c</columns>
        <columns>Constituent__c</columns>
        <columns>Subject__c</columns>
        <columns>Action__c</columns>
        <columns>DOC_DATE__c</columns>
        <columns>TO_DO__c</columns>
        <columns>FROM_DO__c</columns>
        <columns>TO_GOV__c</columns>
        <columns>Due_Date_DO__c</columns>
        <filterScope>Everything</filterScope>
        <label>DCCA Director Office Referrals List</label>
    </listViews>
    <recordTypes>
        <fullName>DCCA_DO_Record</fullName>
        <active>true</active>
        <description>Director&apos;s Office section</description>
        <label>DCCA DO Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCCA_DIV_Record</fullName>
        <active>true</active>
        <description>Division View of DCCA DO Referrals</description>
        <label>DCCA DIV Record</label>
    </recordTypes>
</CustomObject>